[metadata]
name = iMSminer
version = 0.2.1
author = Yu Tin Lin
author_email = yutinlin@stanford.edu
description = iMSminer provides user-friendly, partially GPU- or compiler-accelerated multi-condition, multi-ROI, and multi-dataset preprocessing and mining of larger-than-memory imaging mass spectrometry datasets in Python.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Prentice-lab-UF/iMSminer
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License 
    Operating System :: OS Independent

[options]
package_dir = src
packages = find: 
python_requires = >=3.6

[options.packages.find]
where = src

